--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Push it to Github</title>
 </head>
 <body>
-    
+    <h1>Hello</h1>
+    <h2>Github</h2>
 </body>
 </html>
